--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ body {
     text-align: right;
     width: 100%;
     background-color: white;
-    background-blend-mode: color;
+    background-blend-mode: initial;
     /* mix-blend-mode: initial; */
     top: 0px;
 }
