--- a/main.css
+++ b/main.css
@@ -33,9 +33,7 @@ body {
     position: fixed;
     text-align: right;
     width: 100%;
-    background-color: white;
-    background-blend-mode: initial;
-    mix-blend-mode: initial;
+    background-color: bisque;
     top: 0px;
 }
 
@@ -175,6 +173,13 @@ nav a:hover {
     height: 20%;
     left: 15vw;
     bottom: 25vh;
+}
+
+#computer_gif {
+    position: absolute;
+    height: 20%;
+    right: 10vw;
+    bottom: 20vh;
 }
 
 
