--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ nav a:hover {
     /* center the element */
     left: 50%;
     margin-left: -2rem;
-    margin-top: 9rem;
+    /* margin-top: 9rem; */
 }
 
 #scroll_button:hover {
