--- a/main.css
+++ b/main.css
@@ -82,6 +82,7 @@ nav a:hover {
     /* center the element */
     left: 50%;
     margin-left: -2rem;
+    margin-bottom: 2vh;
     /* margin-top: 9rem; */
 }
 
