--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ nav a:hover {
     font-family: Autumn Chant;
     color: black;
     font-weight: bold;
-    margin: 10%;
+    /* margin: 10%; */
 }
 
 
