--- a/main.css
+++ b/main.css
@@ -83,8 +83,8 @@ nav a:hover {
     /* center the element */
     left: 50%;
     margin-left: -2rem;
-    margin-bottom: 0vh;
-    /* margin-top: 9rem; */
+    /* margin-bottom: 0vh; */
+    margin-top: 9rem;
 }
 
 #scroll_button:hover {
