--- a/main.css
+++ b/main.css
@@ -63,8 +63,8 @@ body {
     background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
 
     background-repeat:no-repeat;
-    /* background-position:top; */
-    /* background-size:auto 1000px; */
+    background-position:top; 
+    background-size:auto 1000px;
 }
 
 nav a {
