--- a/main.css
+++ b/main.css
@@ -58,13 +58,11 @@ body {
     position: fixed;
     text-align: right;
     width: 100%;
-    /* background-color: bisque; */
     top: 0px;
-    background: -webkit-linear-gradient(top, bisque, #fff4e6);
-
+    
+    background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
     background-repeat:no-repeat;
     background-position:top; 
-    background-size:auto 1000px;
 }
 
 nav a {
