--- a/main.css
+++ b/main.css
@@ -63,6 +63,7 @@ body {
     background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
     background-repeat:no-repeat;
     background-position:top; 
+    background-size: auto 2000px;
 }
 
 nav a {
