--- a/main.css
+++ b/main.css
@@ -169,8 +169,8 @@ footer {
     position: absolute;
     max-width: 8%;
     height: auto;
-    bottom: 95vh;
-    right: 30vw;
+    bottom: 95%;
+    right: 30%;
 }
 
 #gudetama_gif {
@@ -178,39 +178,39 @@ footer {
     max-width: 20%;
     height: auto;
 	bottom: 200px;
-	left: 42vw;
+	left: 42%;
 }
 
 #gudetama_img {
 	position: absolute;
 	max-width: 18%;
 	height: auto;
-	bottom: 90vh;
-	left: 44vw;
+	bottom: 90%;
+	left: 44%;
 }
 
 #camera_gif {
     position: absolute;
     max-width: 10%;
     height: auto;
-	bottom: 95vh;
-    left: 33vw;
+	bottom: 95%;
+    left: 33%;
 }
 
 #musicnote_gif {
     position: absolute;
     max-width: 4%;
     height: auto;
-    bottom: 100vh;
-    right: 25vw;
+    bottom: 100%;
+    right: 25%;
 }
 
 #journal_gif {
     position: absolute;
     max-width: 5%;
     height: auto;
-    bottom: 93vh;
-    left: 27vw;
+    bottom: 93%;
+    left: 27%;
 }
 
 
