--- a/main.css
+++ b/main.css
@@ -59,13 +59,13 @@ body {
     position: fixed;
     text-align: right;
     width: 100%;
-    height: 5%;
+    height: 3%;
     top: 0px;
     
     background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
     background-repeat:no-repeat;
     background-position:top;  
-    background-size:100% 100%;
+    background-size:contain;
 	z-index: 9999;
 }
 
