--- a/main.css
+++ b/main.css
@@ -59,12 +59,12 @@ body {
     position: fixed;
     text-align: right;
     width: 100%;
-    height: 3%;
+    height: 4%;
     top: 0px;
     
     background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
     background-repeat:no-repeat;
-    background-position:top;  
+    background-position:2236px;  
     background-size:contain;
 	z-index: 9999;
 }
