--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ nav a:hover {
     background-color: bisque;
     border: none;
     font-size: 110%;
-    padding: 1%;
+    padding: 3px;
     border-radius: 2%;
 }
 
