--- a/main.css
+++ b/main.css
@@ -24,8 +24,6 @@
 body {
     background: -webkit-linear-gradient(top, bisque 100vh, #fff4e6 120vh);
     margin: 0px;
-	background-repeat: no-repeat;
-	height: 1000px;
 }
 
 /* scroll indicator */
@@ -66,8 +64,8 @@ body {
     
     background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
     background-repeat:no-repeat;
-    background-position: 0;  
-    background-size: auto 1000px;
+    background-position: 0;
+    background-size: auto 10%;
 	z-index: 9999;
 }
 
