--- a/main.css
+++ b/main.css
@@ -59,13 +59,13 @@ body {
     position: fixed;
     text-align: right;
     width: 100%;
-	height: 10%;
+	height: 20%;
     top: 0px;
     
     background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
     background-repeat:no-repeat;
-    background-position: 0;
-    background-size: auto 10%;
+/*    background-position: 0 0;*/
+/*	background-size: 100% 1000%;*/
 	z-index: 9999;
 }
 
