--- a/main.css
+++ b/main.css
@@ -59,12 +59,11 @@ body {
     position: fixed;
     text-align: right;
     width: 100%;
-	/* height: 5%; */
     top: 0px;
     
     background-image: -webkit-linear-gradient(top, bisque, #fff4e6);
     background-repeat:no-repeat;
-/*    background-position: 0 0;*/
+   background-position: top;
 /*	background-size: 100% 1000%;*/
 	z-index: 9999;
 }
