remove about me so it's centered lol

--- a/main.css
+++ b/main.css
@@ -210,12 +210,13 @@ footer {
 }
 
 #gudetama_img {
-	position: absolute;
+	position: fixed;
 /*	max-width: 200px;*/
 	height: 130px;
 	width: auto;
 	bottom: 90%;
 	left: 44%;
+    transform: translate(-50%, -50%);
 }
 
 #camera_gif {
