remove styling for now

--- a/main.css
+++ b/main.css
@@ -185,29 +185,6 @@ footer {
 }
 
 /* gifs */
-#computer_gif {
-    position: absolute;
-/*
-    max-width: 8%;
-	min-width: 7%;
-*/
-	width: auto;
-    height: 100px;
-    bottom: 93%;
-    right: 29%;
-}
-
-.gudetama-container {
-    padding: 2%;
-}
-
-#gudetama_gif {
-    position: absolute;
-    max-width: 20%;
-    height: auto;
-	bottom: 200px;
-	left: 42%;
-}
 
 #gudetama_img {
 	display: block;
@@ -215,32 +192,39 @@ footer {
     margin-right: auto;
     height: 130px;
 }
+#computer_gif {
+    /* position: absolute;
+	width: auto;
+    height: 100px;
+    bottom: 93%;
+    right: 29%; */
+}
 
 #camera_gif {
-    position: absolute;
+    /* position: absolute;
     max-width: 10%;
 	min-width: 10%;
     height: auto;
 	bottom: 95%;
-    left: 33%;
+    left: 33%; */
 }
 
 #musicnote_gif {
-    position: absolute;
+    /* position: absolute;
     max-width: 4%;
 	min-width: 4%;
     height: auto;
     bottom: 97%;
-    right: 24%;
+    right: 24%; */
 }
 
 #journal_gif {
-    position: absolute;
+    /* position: absolute;
     max-width: 5%;
 	min-width: 5%;
     height: auto;
     bottom: 93%;
-    left: 27%;
+    left: 27%; */
 }
 
 
