--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ nav a:hover {
 /* text & images */ 
 
 .section{
-    font-family: Roboto Slab;
+    font-family: Oswald;
     font-size: 105%;
     padding: 5%;
     margin-top: 13%;
@@ -206,8 +206,7 @@ footer {
 
 #camera_gif {
     position: absolute;
-    max-width: 10%;
-	min-width: 10%;
+    width: 130px;
     height: auto;
 	bottom: 95%;
     left: 33%;
