--- a/main.css
+++ b/main.css
@@ -155,10 +155,11 @@ nav a:hover {
 .section{
     font-family: Oswald;
     font-size: 105%;
-    padding: 5%;
+    padding: 8%;
     margin-top: 13%;
     margin-bottom: 13%;
-    margin-right: 15%;
+    margin-right: 16%;
+    margin-left: 16%;
 }
 
 .section_header {
@@ -177,6 +178,7 @@ nav a:hover {
     margin-top: 13%;
     border-radius: 50px; 
     float: left;
+    margin-left: 16%;
 }
 
 footer {
