hmm let's try round

--- a/main.css
+++ b/main.css
@@ -175,7 +175,7 @@ nav a:hover {
     width: 20%;
     padding: 5%;
     margin-top: 13%;
-    border-radius: 50px; 
+    border-radius: 50%; 
     float: left;
     margin-left: 16%;
 }
