i hoep this works

--- a/main.css
+++ b/main.css
@@ -153,6 +153,7 @@ nav a:hover {
 
 .section{
     font-family: Oswald;
+    font-weight: 200;
     font-size: 105%;
     padding: 8%;
     margin-top: 13%;
