--- a/main.css
+++ b/main.css
@@ -139,6 +139,8 @@ nav a:hover {
 #resume_button {
     font-family: Oswald;
     font-weight: 300;
+    letter-spacing: 1px;
+
     background-color: bisque;
     border: none;
     font-size: 110%;
@@ -155,7 +157,8 @@ nav a:hover {
 .section{
     font-family: Oswald;
     font-weight: 300;
-    font-size: 105%;
+    font-size: 110%;
+    letter-spacing: 1px;
     padding: 8%;
     margin-top: 13%;
     margin-bottom: 13%;
