--- a/main.css
+++ b/main.css
@@ -167,6 +167,7 @@ nav a:hover {
     font-size: 110%;
     padding: 3px;
     border-radius: 2%;
+    text-decoration: none;
 }
 
 #resume_button:hover {
