--- a/main.css
+++ b/main.css
@@ -210,14 +210,12 @@ nav a:hover {
 }
 
 .flower_divider {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
 }
 
 #flower_gif {
-    height: 25px;
-    width: 25px;
+    height: 100px;
+    width: 100px;
 }
 
 footer {
