--- a/main.css
+++ b/main.css
@@ -200,8 +200,8 @@ nav a:hover {
 }
 
 .profilepic {
-    height: 25%;
-    width: 15%;
+    height: 350px;
+    width: auto;
     padding: 5%;
     margin-top: 13%;
     border-radius: 50%; 
