--- a/main.css
+++ b/main.css
@@ -227,7 +227,7 @@ footer {
 
 .skills_container {
     display: grid;
-    grid-template-columns: 100% 1fr;
+    grid-column: 1;
 }
 
 .skills_box {
