--- a/main.css
+++ b/main.css
@@ -121,9 +121,10 @@ nav a:hover {
     position: relative;
     
     /* animation */
-    animation: fadeInAnimation ease 3s;
+    animation: fadeInAnimation ease 6s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    animation-delay: 15s;
 }
 #name { font-size: 1000%;}
 #subname { font-size: 200%;}
