--- a/main.css
+++ b/main.css
@@ -124,6 +124,10 @@ nav a:hover {
     animation: fadeInAnimation ease 6s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+
+    -moz-animation: fadein 3s ease-in 7s forwards; /* Firefox */
+    -webkit-animation: fadein 3s ease-in 7s forwards; /* Safari and Chrome */
+    -o-animation: fadein 3s ease-in 7s forwards; /* Opera */
 }
 #name { font-size: 1000%;}
 #subname { font-size: 200%;}
