--- a/main.css
+++ b/main.css
@@ -117,7 +117,11 @@ nav a:hover {
     position: fixed;
     bottom: 0;
     right: 0;
+    color: black;
+}
 
+.scroll_to_top_button:hover {
+    color: darkgray;
 }
 /* name banner */
 .banner{
