--- a/main.css
+++ b/main.css
@@ -160,13 +160,25 @@ nav a:hover {
 @keyframes fadeInLeft {
     0% {
        opacity: 0;
-       transform: translateX(-20px);
+       transform: translateX(-50px);
     }
     100% {
        opacity: 1;
        transform: translateX(0);
     }
  }  
+
+ @keyframes fadeInRight {
+    0% {
+       opacity: 0;
+       transform: translateX(50px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateX(0);
+    }
+ }  
+ 
  
  @keyframes fadeOutLeft {
     100% {
@@ -247,6 +259,11 @@ nav a:hover {
     margin-bottom: 13%;
     margin-right: 16%;
     margin-left: 16%;
+
+    /* animation */
+    animation: fadeInRight ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .section_header {
@@ -264,9 +281,9 @@ nav a:hover {
     float: left;
     margin-left: 16%;
 
-    /* animation: fadeInLeft ease 6s;
+    animation: fadeInLeft ease 1s;
     animation-iteration-count: 1;
-    animation-fill-mode: forwards; */
+    animation-fill-mode: forwards;
 }
 
 .flower_divider {
