--- a/main.css
+++ b/main.css
@@ -359,6 +359,7 @@ footer {
     margin-left: 20px;
     margin-right: 20px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .skills_left_button {
