--- a/main.css
+++ b/main.css
@@ -345,7 +345,7 @@ footer {
 .skills_smaller_container {
     justify-items: center;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-
+    display: grid;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
