--- a/main.css
+++ b/main.css
@@ -360,6 +360,8 @@ footer {
     margin-right: 20px;
     text-align: center;
     margin-bottom: 20px;
+    list-style: none;
+    position: relative;
 }
 
 .skills_smaller_title {
