--- a/main.css
+++ b/main.css
@@ -362,6 +362,7 @@ footer {
     margin-right: 20px;
     text-align: center;
     margin-bottom: 20px;
+    grid-row: 1;
 }
 
 .skills_smaller_title {
