--- a/main.css
+++ b/main.css
@@ -342,10 +342,11 @@ footer {
     color: darkgray;
 }
 /* skills smaller */
+
 .skills_smaller_container {
     justify-items: center;
     /* grid-template-columns: repeat(auto-fit, minmax(0px, 1fr)); */
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
     /* position: relative; */
     display: grid;
     max-height: 0;
