--- a/main.css
+++ b/main.css
@@ -364,6 +364,7 @@ footer {
     text-align: center;
     margin-bottom: 20px;
     grid-row: 1;
+    display: grid;
     transition: transform 250ms ease-in;
 }
 
